# rosgame-agents

./: README.md
racer_18/: CMakeLists.txt  package.xml
racer_18/include/racer_18/: racer.hpp
racer_18/launch/: racer_launch.xml
racer_18/src/: racer.cpp
warrior_18/: CMakeLists.txt  package.xml
warrior_18/include/warrior_18/: dummy.hpp  estratega.hpp  warrior.hpp
warrior_18/launch/: dummie_launch.xml  warrior_launch.xml
warrior_18/src/: dummy.cpp  estratega.cpp  main_dummy.cpp  main_estratega.cpp  main_warrior.cpp  racer.cpp  warrior.cpp
